--- a/app/src/main/res/layout/custom_header.xml
+++ b/app/src/main/res/layout/custom_header.xml
@@ -10,7 +10,7 @@
         android:layout_width="164dp"
         android:layout_height="47dp"
         android:layout_marginTop="20dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/todo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu_button" />
@@ -33,7 +33,7 @@
         android:layout_height="42dp"
         android:layout_marginStart="350dp"
         android:layout_marginTop="40dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/todo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/profile_avatar_women" />
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Patient details"
+        android:text="@string/patient_details"
         android:textColor="@color/white"
         android:textFontWeight="700"
         android:textSize="20sp"
@@ -60,7 +60,7 @@
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:layout_marginTop="-40dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/todo"
         android:src="@drawable/profile_avatar_women"
         android:translationZ="10dp"
         app:layout_constraintEnd_toEndOf="parent"
