--- a/app/src/main/res/layout/fragment_current_medical_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_current_medical_diagnostics.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
-                android:text="Name"
+                android:text="@string/name"
                 android:textColor="@color/text_heading_color"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -39,7 +39,7 @@
                 android:autofillHints=""
                 android:background="@null"
                 android:inputType="text"
-                android:text="Marilyn Bvaton"
+                android:text="@string/marilyn_bvaton"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
-                android:text="Blood Pressure"
+                android:text="@string/blood_pressure"
                 android:textColor="@color/text_heading_color"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -92,7 +92,7 @@
                 android:autofillHints=""
                 android:background="@null"
                 android:inputType="text"
-                android:text="Normal"
+                android:text="@string/normal"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -130,7 +130,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
-                android:text="Patient Temperature"
+                android:text="@string/patient_temperature"
                 android:textColor="@color/text_heading_color"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -144,7 +144,7 @@
                 android:autofillHints=""
                 android:background="@null"
                 android:inputType="text"
-                android:text="Normal"
+                android:text="@string/normal"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -183,7 +183,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
-                android:text="Glucose Level"
+                android:text="@string/glucose_level"
                 android:textColor="@color/text_heading_color"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -197,7 +197,7 @@
                 android:autofillHints=""
                 android:background="@null"
                 android:inputType="text"
-                android:text="High"
+                android:text="@string/high"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -237,7 +237,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
-                android:text="O2 Saturation"
+                android:text="@string/o2_saturation"
                 android:textColor="@color/text_heading_color"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -251,7 +251,7 @@
                 android:autofillHints=""
                 android:background="@null"
                 android:inputType="text"
-                android:text="Normal"
+                android:text="@string/normal"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -291,7 +291,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
-                android:text="Pulse Rate"
+                android:text="@string/pulse_rate"
                 android:textColor="@color/text_heading_color"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -305,7 +305,7 @@
                 android:autofillHints=""
                 android:background="@null"
                 android:inputType="text"
-                android:text="High"
+                android:text="@string/high"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -345,7 +345,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
-                android:text="Respiration Rate"
+                android:text="@string/respiration_rate"
                 android:textColor="@color/text_heading_color"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -359,7 +359,7 @@
                 android:autofillHints=""
                 android:background="@null"
                 android:inputType="text"
-                android:text="High"
+                android:text="@string/high"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -399,7 +399,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
-                android:text="Bloodfat Level"
+                android:text="@string/bloodfat_level"
                 android:textColor="@color/text_heading_color"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -413,7 +413,7 @@
                 android:autofillHints=""
                 android:background="@null"
                 android:inputType="text"
-                android:text="High"
+                android:text="@string/high"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
