--- a/app/src/main/res/layout/layout_false_alert_confirmed.xml
+++ b/app/src/main/res/layout/layout_false_alert_confirmed.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/TG_blue"
-        android:text="OK"
+        android:text="@string/ok"
         android:textColor="@color/white"
         android:textStyle="normal|bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:maxWidth="250dp"
-        android:text="False Alert Noted And Benjamin's Activity Profile Has Been Updated \n \n All admins have been notified."
+        android:text="@string/false_alert_noted_and_benjamin_s_activity_profile_has_been_updated_n_n_all_admins_have_been_notified"
         android:textAlignment="center"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="sans-serif-black"
-        android:text="False Alert Confirmed!"
+        android:text="@string/false_alert_confirmed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
