--- a/app/src/main/res/layout/layout_navigation_header.xml
+++ b/app/src/main/res/layout/layout_navigation_header.xml
@@ -28,7 +28,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="User"
+        android:text="@string/user"
         android:textColor="@color/colorPrimaryText"
         android:textSize="18sp"
         android:textStyle="bold"
