--- a/app/src/main/res/layout/navigation_view.xml
+++ b/app/src/main/res/layout/navigation_view.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="72dp"
             android:layout_marginTop="41dp"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/gopher_logo" />
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Home"
+                android:text="@string/home"
                 android:textColor="#FFFFFF"
                 android:textSize="17sp"
                 android:textStyle="bold" />
@@ -61,7 +61,7 @@
                 android:id="@+id/menu_admin_icon"
                 android:layout_width="22.5dp"
                 android:layout_height="20dp"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/todo"
                 android:src="@drawable/menu_pen_edit" />
 
             <TextView
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Admin"
+                android:text="@string/admin"
                 android:textColor="#FFFFFF"
                 android:textSize="17sp"
                 android:textStyle="bold" />
@@ -92,7 +92,7 @@
                 android:id="@+id/menu_settings_icon"
                 android:layout_width="22.5dp"
                 android:layout_height="20dp"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/todo"
                 android:src="@drawable/menu_settings" />
 
             <TextView
@@ -101,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Settings"
+                android:text="@string/settings"
                 android:textColor="#FFFFFF"
                 android:textSize="17sp"
                 android:textStyle="bold" />
@@ -123,7 +123,7 @@
                 android:id="@+id/menu_sigh_out_icon"
                 android:layout_width="22.5dp"
                 android:layout_height="20dp"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/todo"
                 android:src="@drawable/menu_signout" />
 
             <TextView
@@ -132,7 +132,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Sign Out"
+                android:text="@string/sign_out"
                 android:textColor="#FFFFFF"
                 android:textSize="17sp"
                 android:textStyle="bold" />
