--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -28,7 +28,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="56dp"
-                    android:contentDescription="TODO"
+                    android:contentDescription="@string/todo"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/menu_button" />
@@ -39,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="Settings"
+                    android:text="@string/settings"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -80,7 +80,7 @@
                 android:layout_height="20sp"
                 android:layout_marginStart="25dp"
                 android:fontFamily="@font/poppins"
-                android:text="Theme Mode"
+                android:text="@string/theme_mode"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="400"
                 android:textSize="16sp"
@@ -93,7 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/todo"
                 android:src="@drawable/settings_arrow"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -105,7 +105,7 @@
                 android:layout_height="17sp"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/poppins"
-                android:text="Change"
+                android:text="@string/change"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="275"
                 android:textSize="13sp"
@@ -135,7 +135,7 @@
                 android:layout_height="20sp"
                 android:layout_marginStart="25dp"
                 android:fontFamily="@font/poppins"
-                android:text="Notifications"
+                android:text="@string/notifications"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="400"
                 android:textSize="16sp"
@@ -157,7 +157,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/todo"
                 android:src="@drawable/settings_arrow"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -196,7 +196,7 @@
                 android:layout_height="20sp"
                 android:layout_marginStart="25dp"
                 android:fontFamily="@font/poppins"
-                android:text="App Update"
+                android:text="@string/app_update"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="400"
                 android:textSize="16sp"
@@ -209,7 +209,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/todo"
                 android:src="@drawable/settings_arrow"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -234,7 +234,7 @@
                 android:layout_height="20sp"
                 android:layout_marginStart="25dp"
                 android:fontFamily="@font/poppins"
-                android:text="Feedback"
+                android:text="@string/feedback"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="400"
                 android:textSize="16sp"
@@ -247,7 +247,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/todo"
                 android:src="@drawable/settings_arrow"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
