--- a/app/src/main/res/layout/activity_suggestion.xml
+++ b/app/src/main/res/layout/activity_suggestion.xml
@@ -32,7 +32,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="72dp"
                         android:layout_marginEnd="28dp"
-                        android:contentDescription="TODO"
+                        android:contentDescription="@string/todo"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.968"
                         app:layout_constraintStart_toEndOf="@+id/imageView7"
@@ -44,7 +44,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="72dp"
-                        android:contentDescription="TODO"
+                        android:contentDescription="@string/todo"
                         app:layout_constraintEnd_toStartOf="@+id/imageView7"
                         app:layout_constraintHorizontal_bias="0.184"
                         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
                         android:layout_width="45dp"
                         android:layout_height="40dp"
                         android:layout_marginTop="72dp"
-                        android:contentDescription="TODO"
+                        android:contentDescription="@string/todo"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -69,7 +69,7 @@
                         android:layout_marginStart="132dp"
                         android:layout_marginTop="12dp"
                         android:fontFamily="@font/poppins_bold"
-                        android:text="Health Details"
+                        android:text="@string/health_details"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
                         android:layout_height="25dp"
                         android:layout_marginStart="24dp"
                         android:layout_marginTop="24dp"
-                        android:contentDescription="TODO"
+                        android:contentDescription="@string/todo"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/imageView8"
                         app:srcCompat="@drawable/back_arrow" />
@@ -97,7 +97,7 @@
                 android:layout_marginTop="-15dp"
                 android:background="@drawable/rounded_bg"
                 android:gravity="center_vertical"
-                android:text="Patient: Benjamin Hogan"
+                android:text="@string/patient_benjamin_hogan"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:translationZ="20dp"
@@ -108,7 +108,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="298dp"
                 android:layout_marginTop="10dp"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/todo"
                 app:srcCompat="@drawable/bedroom_activity" />
 
         <LinearLayout
@@ -123,7 +123,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/rounded_bg"
                     android:gravity="center"
-                    android:text="Last Updated: 02/12/2022 5:20 pm"
+                    android:text="@string/last_updated_02_12_2022_5_20_pm"
                     android:textAlignment="center"
                     android:textStyle="bold"
                     android:translationZ="40dp" />
@@ -143,7 +143,7 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="12dp"
                         android:fontFamily="@font/poppins"
-                        android:text="Suggestion"
+                        android:text="@string/suggestion"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +169,7 @@
                         android:layout_marginTop="7dp"
                         android:layout_marginBottom="10dp"
                         android:background="@color/white"
-                        android:contentDescription="TODO"
+                        android:contentDescription="@string/todo"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -185,7 +185,7 @@
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="32dp"
-                    android:text="If you have already checked up on the patient, Guardian requests your input on this situation"
+                    android:text="@string/if_you_have_already_checked_up_on_the_patient_guardian_requests_your_input_on_this_situation"
                     android:textSize="10sp" />
 
             <LinearLayout
@@ -200,7 +200,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@color/white"
-                        android:contentDescription="TODO"
+                        android:contentDescription="@string/todo"
                         app:srcCompat="@drawable/ignore_button" />
 
                 <ImageButton
@@ -209,7 +209,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@color/white"
-                        android:contentDescription="TODO"
+                        android:contentDescription="@string/todo"
                         app:srcCompat="@drawable/confirm_behaviour" />
             </LinearLayout>
         </LinearLayout>
