--- a/app/src/main/res/layout/fragment_medical_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_medical_diagnostics.xml
@@ -35,7 +35,7 @@
                         android:layout_height="match_parent"
                         android:fontFamily="@font/poppins_bold"
                         android:gravity="center"
-                        android:text="Medical Diagnostics"
+                        android:text="@string/medical_diagnostics"
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         tools:layout_editor_absoluteX="132dp"
