--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,8 @@
             android:layout_marginStart="64dp"
             android:layout_marginTop="28dp"
             android:layout_marginEnd="64dp"
-            android:text="@string/lorem_ipsum_dolor_sit_amet"
+            android:text="@string/main_activity_solgan"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
